# bpm

./: .gitmodules  CMakeLists.txt  CMakeLists.txt    CMakeLists.txt.save  README.md  package.json
bpm-frontend/: README.md  package-lock.json  package.json
bpm-frontend/src/: App.css  App.js
bpm-frontend/src/api/: bpmApi.js
bpm-frontend/src/components/: JobControlPanel.jsx  JobMetrics.jsx  Notifications.jsx  RobotWorkflowPanel.jsx  SocketStatusGrid.jsx
lib/cmake/oatpp-1.4.0/: oatppTargets-release.cmake  oatppTargets.cmake
src/: ProgrammingSystemState.hpp
src/controller/: MyController.cpp  MyController.hpp
src/dto/: DTOs.hpp  JobDto.hpp
test/: README.md
